Add support for running Javalanche mutation testing tool.